Simplify organizational cache snapshots and user queries